--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid container">
           <a class="navbar-brand" href="#"><img class="logo" src="images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#">Works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Client</a>
@@ -51,10 +51,10 @@
             </ul>
           </div>
         </div>
-      </nav>
+</nav>
 
 
-      <section class="profile">
+<section class="profile">
         <div class="container">
           <div class="row">
             <div class="col-md-7">
@@ -100,27 +100,87 @@
             </div>
           </div>
         </div>
-      </section>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L17.1,229.3C34.3,235,69,245,103,229.3C137.1,213,171,171,206,165.3C240,160,274,192,309,213.3C342.9,235,377,245,411,261.3C445.7,277,480,299,514,277.3C548.6,256,583,192,617,186.7C651.4,181,686,235,720,261.3C754.3,288,789,288,823,261.3C857.1,235,891,181,926,176C960,171,994,213,1029,240C1062.9,267,1097,277,1131,272C1165.7,267,1200,245,1234,234.7C1268.6,224,1303,224,1337,224C1371.4,224,1406,224,1423,224L1440,224L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path></svg>
+</section>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L17.1,229.3C34.3,235,69,245,103,229.3C137.1,213,171,171,206,165.3C240,160,274,192,309,213.3C342.9,235,377,245,411,261.3C445.7,277,480,299,514,277.3C548.6,256,583,192,617,186.7C651.4,181,686,235,720,261.3C754.3,288,789,288,823,261.3C857.1,235,891,181,926,176C960,171,994,213,1029,240C1062.9,267,1097,277,1131,272C1165.7,267,1200,245,1234,234.7C1268.6,224,1303,224,1337,224C1371.4,224,1406,224,1423,224L1440,224L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path></svg>
     
-      <section class="container" id="services">
+<section class="container" id="services">
       <div class="first_texts">
         <h1>Services.</h1>
         <h3 class="pt-3 colorful">We work with you, Not for you</h3>
       </div>
       <div class="boxes mt-5">
         <div class="row text-center">
-          <div class="col-md-3 single_box box1"><h4>Digitale strategy →</h4></div>
-          <div class="col-md-3 single_box box2"><h3>UX Design →</i></h4></div>
-          <div class="col-md-3 single_box box3"><h4>Product Design → </h4></div>
+          <div class="col-md-3 single_box box1"><h5>Digitale strategy →</h5></div>
+          <div class="col-md-3 single_box box2"><h5>UX Design →</i></h5></div>
+          <div class="col-md-3 single_box box3"><h5>Product Design → </h5></div>
         </div>
-        
+        <div class="row text-center">
+          <div class="col-md-3 single_box box1"><h5>Content Strategy →</h5></div>
+          <div class="col-md-3 single_box box2"><h5>Design & Concept →</i></h5></div>
+          <div class="col-md-3 single_box box3"><h5>Social Media → </h5></div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-3 single_box box1"><h5>Media Planing →</h5></div>
+          <div class="col-md-3 single_box box2"><h5>Brand Identity→</i></h5></div>
+          <div class="col-md-3 single_box box3"><h5>SEO Optimization → </h5></div>
+        </div>
       </div>
+</section>
 
-    </section>
+<section class="works container">
+      <div class="button_texts">
+        <div class="first_text">
+          <h1>Works.</h1>
+          <h3 class="colorful">THINGS WE'VE MADE</h3>
+        </div>
+        <div class="btn-pink mt-5 diffarent">
+          <button type="button" class="pink-button">View All</button>
+         </div>
+      </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner mb-5">
+          <div class="carousel-item active">
+            <img src="images/bedroom.jpg" class="d-block w-100 works_pic" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bedroom-2.jpg" class="d-block w-100 works_pic" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bedroom-3.jpg" class="d-block w-100 works_pic" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+</section>
+
+<section class="about" id="about">
+<div class="row">
+  <div class="col-md-6"><img class= w-100 src="images/1575023934-126627-1-1.jpg" alt=""></div>
+  <div class="col-md-6">
+    <div class="row-col-md-6"><img src="images/Artificial-Intelligence-5.webp" alt=""></div>
+    <div class="row-col-md-6"><img src="images/copy-paste-project-500x500.jpg" alt=""></div>
+  </div>
+</div>
+
+</section>
 
 
 
-    <script src="js/bootstrap.min.js"></script>
+
+
+
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
